@@ -301,6 +301,9 @@ namespace libtorrent
 		if (!m_root_cert.empty())
 			info["ssl-cert"] = m_root_cert;
 
+		if (!m_encryption_key.empty())
+			info["encryption-key"] = m_encryption_key;
+
 		if (m_private) info["private"] = 1;
 
 		if (!m_multifile)
